[package]
name = "flatkvm"
version = "0.1.6"
authors = ["Sergio Lopez <slp@sinrega.org>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
dbus = "0.6.2"
env_logger = "0.5.12"
log = "0.4"
rand = "0.5.5"
regex = "1"

flatkvm-qemu = { git = "https://github.com/flatkvm/flatkvm-qemu" }
x11-clipboard = { git = "https://github.com/flatkvm/x11-clipboard" }
